# duplicated_checking_IQuOD

./: .gitignore  DC_OCEAN-1.3-py3-none-any.whl  DC_OCEAN-1.3.2-py3-none-any.whl  DC_OCEAN-1.3.4-py3-none-any.whl  DC_OCEAN_user_document-v1.0.md  DC_OCEAN_user_document-v1.1.md  Demo_full_run.ipynb  M01_MAIN_check_nc_duplicate_manual.py  M02_MAIN_check_nc_duplicate_list.py  N01_read_excel_1.m  N02_10_duplicate_check_main_2_mapminmax_weighted_allinfo.m  N02_11_duplicate_check_mapminmax_weight_meta_noLATLON.m  N02_12_duplicate_check_main_2_mapminmax_weight_meta_noDepthinfo.m  N02_13_duplicate_check_main_2_PAC_90_allinfo.m  N02_14_duplicate_check_main_2_PAC_95_allinfo.m  N02_1_duplicate_check_main_2_mapstd_average.m  N02_2_duplicate_check_main_2_onlydepthtemp_compair.m  N02_3_duplicate_check_main_2_weight_meta.m  N02_4_duplicate_check_main_2_weighted_allinfo.m  N02_5_duplicate_check_weight_meta_noLATLON.m  N02_6_duplicate_check_main_2_weight_meta_noDepthinfo.m  N02_7_duplicate_check_main_2_mapminmax_average  N02_7_duplicate_check_main_2_mapminmax_average.m  N02_8_duplicate_check_main_2_mapminmax_onlydepthtemp_compair.m  N02_9_duplicate_check_main_2_mapminmax_weight_meta.m  N03_potential_duplicate_unique_list_3.m  N04_check_nc_duplicate.py  N04_check_nc_duplicate_4.py  N04_check_nc_duplicate_list.py  N04_check_nc_duplicate_list4.py  N05_make_stat_4.m  N06_flag_duplicates.py  N06_sensitivity_test.py  PKG-INFO  README.md  __init__.py  compair_main.py  compare_difference.py  entropy_weight.m  ocean_data_netCDF_format.cdl  (+2 more)
DC_OCEAN/: Duplicate_Checke.py  Duplicate_Checker.py  M00_Duplicate_Check_MAIN.py  M02_MAIN_check_nc_duplicate_list.py  __init__.py
DC_OCEAN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DC_OCEAN/Input_files/: DuplicateList_sorted_unique_pairs_generic.txt  Unduplicatelist_sorted_unique_pairs_generic.txt  sorted_unique_pairs_generic.txt
DC_OCEAN/Input_files/WOD18_sample_1995/: wod_004181523O.nc  wod_004181527O.nc  wod_007274385O.nc  wod_007274386O.nc  wod_007274387O.nc  wod_007274388O.nc  wod_007274389O.nc  wod_007274390O.nc  wod_007274391O.nc  wod_007274392O.nc  wod_007274393O.nc  wod_007274394O.nc  wod_007274395O.nc  wod_007274396O.nc  wod_007274397O.nc  wod_007274398O.nc  wod_007274399O.nc  wod_007274400O.nc  wod_007274401O.nc  wod_007274402O.nc  (+47 more)
DC_OCEAN/support/: Create_DNA_Summary.py  N00_Create_Profile_Summary_Score.py  N00_read_data_metadata.py  N01_Possible_Duplicate_Check.py  N01_possible_duplicates.py  Possible_Duplicate_Check.py
DC_OCEAN/util/: compair_main.py  country_table.py  math_util_functions.py
Input_files/: DuplicateList_sorted_unique_pairs_generic.txt  Unduplicatelist_sorted_unique_pairs_generic.txt  sorted_unique_pairs_generic.txt
Input_files/WOD18_sample_1995/: wod_004181522O.nc  wod_004181524O.nc  wod_004181525O.nc  wod_004181526O.nc  wod_004181529O.nc  wod_004181531O.nc  wod_004181536O.nc  wod_004181537O.nc  wod_004181539O.nc  wod_004181540O.nc  wod_004181541O.nc  wod_004181542O.nc  wod_004181544O.nc  wod_004181548O.nc  wod_007275930O.nc  wod_007275931O.nc  wod_007275932O.nc  wod_007275933O.nc  wod_007275934O.nc  wod_007275935O.nc  wod_007275937O.nc  wod_007276023O.nc  wod_007276024O.nc  wod_007276025O.nc  wod_007276026O.nc  wod_007276027O.nc  wod_007276028O.nc  wod_007276029O.nc  wod_007276030O.nc  wod_007276031O.nc  wod_007276032O.nc  wod_007276033O.nc  wod_007276034O.nc  wod_007276035O.nc  wod_007276036O.nc  wod_007276037O.nc  wod_007276038O.nc  wod_007276039O.nc  wod_007276040O.nc  wod_007276041O.nc  (+3 more)
WOD18_sample_1995/: wod_004181528O.nc  wod_004181530O.nc  wod_004181532O.nc  wod_004181533O.nc  wod_004181534O.nc  wod_004181535O.nc  wod_004181538O.nc  wod_004181543O.nc  wod_004181545O.nc  wod_004181546O.nc  wod_004181547O.nc  wod_004181549O.nc
check_functions/: compair_main.py
support/: N00_read_metadata.m  N01_formatted_metadata.m  N01_possible_duplicates.py  N02_10_duplicate_check_main_2_mapminmax_weighted_allinfo.m  N02_11_duplicate_check_mapminmax_weight_meta_noLATLON.m  N02_12_duplicate_check_main_2_mapminmax_weight_meta_noDepthinfo.m  N02_13_duplicate_check_main_2_PAC_90_allinfo.m  N02_14_duplicate_check_main_2_PAC_95_allinfo.m  N02_1_duplicate_check_main_2_mapstd_average.m  N02_3_duplicate_check_main_2_weight_meta.m  N02_4_duplicate_check_main_2_weighted_allinfo.m  N02_5_duplicate_check_weight_meta_noLATLON.m  N02_6_duplicate_check_main_2_weight_meta_noDepthinfo.m  N02_7_duplicate_check_main_2_mapminmax_average.m  N02_8_duplicate_check_main_2_mapminmax_onlydepthtemp_compair.m  N02_9_duplicate_check_main_2_mapminmax_weight_meta.m  N03_potential_duplicate_unique_list.m  entropy_weight.m  normalizeData.m  standardizeData.m
tests/: Example1_check_nc_duplicate_demo.py  __init__.py  test_DC_OCEAN.py
tests/Examples_netCDF_files/: WOD18_19750602_00177_OSD.nc
util/: compair_main.py  country_table.py  math_util_functions.py
(+1 files in other folders)
