[build-system]
requires = [
  "setuptools >= 61",
  "setuptools_scm[toml] >= 8",
]
build-backend = 'setuptools.build_meta'

[project]
name="DC_OCEAN"
dynamic = ["version"]
description = "DC_OCEAN: An algorithm to detect the ocean in-situ duplicate profiles (Song et al., 2024, FMS)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Zhetao Tan", email = "tanzhetao19@mails.ucas.ac.cn"},
  {name = "Xinyi Song", email = "songxinyi231@mails.ucas.ac.cn"},
  {name = "Lijing Cheng"},{name = "Rebecca Cowley"}, {name = "Huifeng Yuan"}, {name = "Guilherme Castelao"},
  {name = "Simona Simoncelli"}, {name = "Shoichi Kizu"},{name = "Shoichi Kizu"},{name = "Ricardo Locarnini"},
  {name = "Tim Boyer"}, {name = "Franco Reseghetti"}, {name = "Viktor Gouretski"}
]
maintainers = [
  {name = "Zhetao Tan", email = "tanzhetao19@mails.ucas.ac.cn"},
]
keywords = ["oceanography", "duplicate", "quality control"]
requires-python = ">= 3.8"
classifiers=[
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
	"License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.19.1",
	"netCDF4>=1.5.4",
	"timezonefinder>=6.0.1",
	"pandas>=1.0.3",
	"scipy>=1.7.3",
]

[project.optional-dependencies]
dev = [
  "build>=0.6",
]
doc = [
  "ghp-import>=2.1",
  "numpydoc>=1.6",
  "pandoc>=2.3",
  "sphinx>=7.2",
]
test = [
  "pytest>=7.0",
  "pytest-cov>=3.0",
  "pytest-xdist>=3.0",
]


[project.urls]
homepage = "https://github.com/IQuOD/duplicated_checking_IQuOD/"
repository = "https://github.com/IQuOD/duplicated_checking_IQuOD/"

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
include-package-data = true
packages = ["DC_OCEAN"]

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.rst"]
DC_OCEAN = ['util/*','support/*.py','tests/Examples_netCDF_files/*','Input_files/WOD18_sample_1995/*','Input_files/*.txt','tests/*.py']

[tool.setuptools_scm]
version_file = "DC_OCEAN/_version.py"

[tool.pixi.project]
channels = ["conda-forge", "anaconda", "main"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
DC_OCEAN = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=1.19.1"
netcdf4 = ">=1.5.4"
timezonefinder = ">=6.0.1"
pandas = ">=1.0.3"
scipy = ">=1.7.3"
